@@ -89,7 +89,7 @@ void show_usage(void)
   printf("  -x, --extract              Extract member from library.\n");
   printf("\n");
   printf("Report bugs to:\n");
-  printf("%s\n", BUG_REPORT_URL);
+  printf("%s\n", PACKAGE_BUGREPORT);
   exit(0);
 }
 
