@@ -75,7 +75,6 @@ Boston, MA 02111-1307, USA.  */
   #define COPY_CHAR "/"
 #endif
 
-#define BUG_REPORT_URL "<URL:http://gputils.sourceforge.net/>"
 #define GPUTILS_COPYRIGHT_STRING "Copyright (c) 1998-2004 gputils project"
 
 #endif
